--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ streamlit==1.29.0
 pandas>=1.3.0
 scikit-learn
 altair>=4.0
+langchain-openai==0.0.5
+pymongo==4.6.1
+google-generativeai 
+langchain-google-genai
+langchain==0.1.5
